tests/compile_fails/test_not_send_sync.stderr
error[E0277]: `*mut c_void` cannot be sent between threads safely
 --> tests/compile_fails/test_not_send_sync.rs:7:24
  |
7 |     assert_send_sync::<Model>();
  |                        ^^^^^ `*mut c_void` cannot be sent between threads safely
  |
  = help: within `choco_solver::Model`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `choco_solver::utils::Handle`
 --> src/utils.rs
  |
  | pub(crate) struct Handle {
  |                   ^^^^^^
note: required because it appears within the type `choco_solver::Model`
 --> src/model.rs
  |
  | pub struct Model {
  |            ^^^^^
note: required by a bound in `assert_send_sync`
 --> tests/compile_fails/test_not_send_sync.rs:6:28
  |
6 |     fn assert_send_sync<T: Send + Sync>() {}
  |                            ^^^^ required by this bound in `assert_send_sync`

error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> tests/compile_fails/test_not_send_sync.rs:7:24
  |
7 |     assert_send_sync::<Model>();
  |                        ^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `choco_solver::Model`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `choco_solver::utils::Handle`
 --> src/utils.rs
  |
  | pub(crate) struct Handle {
  |                   ^^^^^^
note: required because it appears within the type `choco_solver::Model`
 --> src/model.rs
  |
  | pub struct Model {
  |            ^^^^^
note: required by a bound in `assert_send_sync`
 --> tests/compile_fails/test_not_send_sync.rs:6:35
  |
6 |     fn assert_send_sync<T: Send + Sync>() {}
  |                                   ^^^^ required by this bound in `assert_send_sync`
